Add thiserror dependency to implement IncompatibleImageError

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ keywords = ["image", "buffer", "ffi", "copy-on-write"]
 categories = ["multimedia::images", "graphics", "computer-vision", "data-structures"]
 
 [dependencies]
+thiserror = "2"
