Add ability to be converted from ::image@0.25, if feature is explicitely enabled

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ categories = ["multimedia::images", "graphics", "computer-vision", "data-structu
 
 [dependencies]
 thiserror = "2"
+image_0_25 = { version = "0.25", package = "image", optional = true }
