--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 authors = ["mineichen"]
 description = "Image buffers that abstract over underlying storage (Vec, Arc, or custom backends). Features copy-on-write semantics for efficient memory usage."
 license = "MPL-2.0"
-repository = "https://github.com/mineichen/image-buffer"
+repository = "https://github.com/mineichen/imbuf"
 readme = "README.md"
 keywords = ["image", "buffer", "ffi", "copy-on-write"]
 categories = ["multimedia::images", "graphics", "computer-vision", "data-structures"]
