Remove image default-features, remove Cargo.lock, because this is a lib.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,5 @@ categories = ["multimedia::images", "graphics", "computer-vision", "data-structu
 
 [dependencies]
 thiserror = "2"
-image_0_25 = { version = "0.25", package = "image", optional = true }
+image_0_25 = { version = "0.25", default-features = false, package = "image", optional = true }
 
