Allow converting imbuf::DynamicImage or imbuf::Image to DynamicRefImage to write itself onto the harddrive

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,8 @@ categories = ["multimedia::images", "graphics", "computer-vision", "data-structu
 thiserror = "2"
 image_0_25 = { version = "0.25", default-features = false, package = "image", optional = true }
 
+[dev-dependencies]
+image_0_25 = { version = "0.25", default-features = false, package = "image", features = ["png"] }
+
+[features]
+default = ["image_0_25"]
